--- a/Latex Document/Thesis.bib
+++ b/Latex Document/Thesis.bib
@@ -193,27 +193,6 @@
   publisher={Springer}
 }
 
-@article{hong2014condition,
-  title={Condition assessment for the performance degradation of bearing based on a combinatorial feature extraction method},
-  author={Hong, Sheng and Zhou, Zheng and Zio, Enrico and Hong, Kan},
-  journal={Digital Signal Processing},
-  volume={27},
-  pages={159--166},
-  year={2014},
-  publisher={Elsevier}
-}
-
-@article{buckley2023feature,
-  title={A feature extraction \& selection benchmark for structural health monitoring},
-  author={Buckley, Tadhg and Ghosh, Bidisha and Pakrashi, Vikram},
-  journal={Structural Health Monitoring},
-  volume={22},
-  number={3},
-  pages={2082--2127},
-  year={2023},
-  publisher={SAGE Publications Sage UK: London, England}
-}
-
 @article{zhang2019new,
   title={A new feature extraction approach using improved symbolic aggregate approximation for machinery intelligent diagnosis},
   author={Zhang, Yulong and Duan, Lixiang and Duan, Menglan},
@@ -348,6 +327,24 @@
   publisher={IEEE}
 }
 
+@book{ahmed2020condition,
+  title={Condition monitoring with vibration signals: Compressive sampling and learning algorithms for rotating machines},
+  author={Ahmed, Hosameldin and Nandi, Asoke K},
+  year={2020},
+  publisher={John Wiley \& Sons}
+}
+
+@article{tolocsi2011classification,
+  title={Classification with correlated features: unreliability of feature ranking and solutions},
+  author={Tolo{\c{s}}i, Laura and Lengauer, Thomas},
+  journal={Bioinformatics},
+  volume={27},
+  number={14},
+  pages={1986--1994},
+  year={2011},
+  publisher={Oxford University Press}
+}
+
 @article{d2019physical,
   title={Physical and Metrological Approach for Feature’s Definition and Selection in Condition Monitoring},
   author={D’Emilia, Giulio and Gaspari, Antonella and Natale, Emanuela},
@@ -357,11 +354,4 @@
   pages={5186},
   year={2019},
   publisher={MDPI}
-}
-
-@book{ahmed2020condition,
-  title={Condition monitoring with vibration signals: Compressive sampling and learning algorithms for rotating machines},
-  author={Ahmed, Hosameldin and Nandi, Asoke K},
-  year={2020},
-  publisher={John Wiley \& Sons}
 }
