--- a/Latex Document/Thesis.tex
+++ b/Latex Document/Thesis.tex
@@ -53,7 +53,7 @@
 \pagenumbering{roman}
 
 \section*{Acknowledgments}
-I would like to thank my supervisors Daniel Rönnow and Oscar Bautista Gonzalez for their guidance and patience. I would like to thank the University of Gävle for offering a Masters program available to take as distance education. I would like to thank my partner, Alex Hamelin, for her support.
+I would like to thank my supervisors Daniel Rönnow and Oscar Bautista Gonzalez for their guidance and patience. I would like to thank the University of Gävle for offering a Masters Program in Electronics and Automation available to take as distance education. I would like to thank my partner, Alex Hamelin, for her support.
 \newpage
 
 \section*{Abstract}
@@ -95,28 +95,27 @@ A number of linear regression models are created based on the results from the c
 \section{Introduction}
 \subsection{Background}
 % What is condition monitoring
-Condition monitoring (\gls{CM}) is the process of predicting machine health through a combination of sensor data and software algorithms. Sensors measure parameters like vibration, temperature and acoustic emissions that provide input data to an algorithm which outputs health metrics. This allows operators to gain some understanding of when a machine might fail and perform some preventative intervention. The ability to monitor equipment health and predict remaining lifetime has valuable benefits. Avoiding unplanned downtime and catastrophic failure allows the extraction of more value from existing resources and less disruption to production schedules.
+Condition monitoring (\gls{CM}) is the process of predicting machine health through a combination of sensor data and software algorithms. Sensors measure parameters (vibration, temperature, acoustic emissions etc.) which provide inputs to an algorithm that outputs health metrics. This allows operators to gain an understanding of when a machine is likely to fail and instead perform some preventative interventions. The ability to monitor equipment health and predict remaining lifetime has valuable benefits. Avoiding unplanned downtime, especially catastrophic failures, allows the extraction of more value from existing resources and less disruption to production schedules.
 
 % Discuss why CM is important
-The application of CM and predictive maintenance (\gls{PM}) is a large area of research in the machine and manufacturing industry. Of course it is not only limited to machines being utilized on other engineering structures like bridges ~\cite{buckley2023feature}, large process plants such as waster water and also biological systems ~\cite{tolocsi2011classification}. 
+The application of \gls{CM} and \gls{PM} is a large area of research in the machine and manufacturing sector. Of course it is not only limited to machines, being utilized on other engineering structures like bridges ~\cite{buckley2023feature}, large process plants and also biological systems ~\cite{tolocsi2011classification}. 
 % Discuss more specifically bearing vibration analysis
-In the manufacturing sector, a common application of (\gls{CM}) is the vibration analysis of rotating machines ~\cite{tiboni2022review}. The degradation of a bearing results changes in the vibration signal which can be a indicator of bearing health. 
-%Even more specifically a tube straightening machine
-Breakdowns in rotating machinery are most commonly caused by failures in bearing subsystems. One such example of an industrial machine that uses roller bearings is a rotary tube straightening machine. These are used as a finishing process in the steel industry for the manufacturing of metal tubes. They are crucial for straightening the tube in the longitudinal direction and improving ovality of the product. 
+A common application of \gls{CM} and \gls{PM} in manufacturing is the vibration analysis of rotating machines ~\cite{tiboni2022review}. Breakdowns in these types of machines are most commonly caused by failures in bearing subsystems. The degradation of a bearing results changes in the vibration signal, among others, which can be a indicator of bearing health. 
 
+%Even more specifically a tube straightening machine
+One such example of an industrial machine that uses roller bearings is a rotary tube straightening machine. These are used as a finishing process in the steel industry for the manufacturing of metal tubes. They are crucial for straightening the tube in the longitudinal direction and improving ovality of the product. 
 % Explain why condition monitoring would be useful for a straightening machine
-Straightening machines, like many other industrial machines, are expensive to acquire and down time is costly. Performance may also be impacted by the machine being in poor condition and in need of maintenance. Thus it is in the interest of the operators to be able to schedule planned maintenance instead of having unplanned downtime and catastrophic failures.
+Straightening machines, like many other industrial machines, are expensive to procure and down time is costly. Performance may also be impacted by the machine being in poor condition and in need of maintenance. Thus it is in the interest of the operators to be able to schedule planned maintenance instead of having unplanned downtime and catastrophic failures.
 
 % Challenges for CM
 %Advantage of having access to this data
-While there is a large array of research around bearing vibration and condition monitoring, all machines have their nuances so one CM strategy is not necessarily suitable for all. No research specifically involving CM on a straightening machine could be found. Unlike a simulation study, CM requires real-world data and it is not readily available unless working inside of a company. This study has access to real world data from such a machine and serves as a great opportunity to do an analysis.
+While there is a vast array of research around bearing vibration and \gls{CM}, all machines have their nuances so one \gls{CM} strategy is not necessarily suitable for all. No research specifically involving \gls{CM} on a straightening machine could be found. Unlike a simulation study, \gls{CM} requires real-world data which is not always readily available unless employed by the company owing the machine. This study assesses real world data from such a machine at a Swedish steel manufacturer, Alleima.
 
 % Big Data -> What is Feature Extraction
-One of the challenges implementing CM is that there are often huge amounts of data to process and sift through. Thus Feature extraction can be used to reduce the amount of data whilst preserving the information from the raw data. By analyzing the features one can then select the most relevant channels and reduce the data even further. How to select the best features is another area of research for exists many automated and non-automated methods. This study uses a semi-automated method using the R\textsuperscript{2} correlation coefficient to select the most appropriate features.
+One of the challenges in implementing \gls{CM} is that there are often huge amounts of data to process and sift through. Thus Feature extraction can be used to reduce the amount of the data whilst preserving the information. By analyzing the features one can then select the most relevant channels and reduce the dimensionality of the data by removing irrelevant, highly correlation or noisy signals. There exist many automated and non-automated methods to select the best features and is a current area of research. This study uses a semi-automated method using the R\textsuperscript{2} correlation coefficient to select the most appropriate features.
 
 % Supervised vs Unsupervised learning
-Another difficulty with condition monitoring research is the limited access to failure data meaning one is often forces to perform unsupervised learning
-Supervised classification uses labeled data to perform the task. However, in real applications this is often not the case. More common is to have partially labeled or totally unlabeled data and thus a different set of techniques exist for unsupervised or semi-supervised learning. Here the data analysis is geared towards pattern recognition and clustering since no failure data is available to go with the data.
+Supervised learning uses labeled data to perform classification, i.e. data is labeled as normal or fault condition. Another difficulty with \gls{CM} research is the limited access to failure data meaning one is often forced to implement unsupervised learning methods. Often one only have partially labeled or totally unlabeled data and thus a different set of techniques exist for unsupervised learning. Here the data analysis is geared towards pattern recognition and clustering since no failure data is available to go with the data. This study has no access to fault or maintenance data and has the goal of trying to find patterns in the data, identify potential clustering opportunities and look at potential trends over time.
 
 \subsection{Project Aim}
 The aim of this project is to examine the existing data collection strategy for a tube straightening machine and make some suggestions as to whether it is possible to perform condition monitoring and/or remaining life analysis for this machine. The first step analyze the available data that can be be attained using the existing sensors and data acquisition system. The end foal is to begin developing a strategy that will assist the company to know when the machine requires maintenance. The specific goals of this project are summarized as follows:
